{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 124,
  "lineage": "af0b33f1-3d7d-3e91-4df1-cfec6314a60e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "product_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7217cdde317cfec",
            "arn": "arn:aws:ec2:us-east-1:765407882676:instance/i-021a3c3612a37de05",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021a3c3612a37de05",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "productapi_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-024fd047449486879",
            "private_dns": "ip-10-0-1-167.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.167",
            "public_dns": "ec2-3-95-215-136.compute-1.amazonaws.com",
            "public_ip": "3.95.215.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09690ab775e947d8d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a73b20ace3616c7d",
            "tags": {
              "Name": "productapi_ec2"
            },
            "tags_all": {
              "Name": "productapi_ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b048af81ecb113de"
            ]
          },
          "dependencies": [
            "aws_key_pair.product_key",
            "aws_security_group.product_sg",
            "aws_subnet.product_subnet",
            "aws_vpc.product_vpc",
            "data.aws_ami.product_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "product_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765407882676:internet-gateway/igw-0cb04ddfc70787a9e",
            "id": "igw-0cb04ddfc70787a9e",
            "owner_id": "765407882676",
            "tags": {
              "Name": "productapi_igw"
            },
            "tags_all": {
              "Name": "productapi_igw"
            },
            "vpc_id": "vpc-04a55a15cf8ca9e13"
          },
          "dependencies": [
            "aws_vpc.product_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "product_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cb04ddfc70787a9e",
            "id": "r-rtb-07189eb144fe1bab61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07189eb144fe1bab6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.product_igw",
            "aws_route_table.product_rtb",
            "aws_vpc.product_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "product_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765407882676:route-table/rtb-07189eb144fe1bab6",
            "id": "rtb-07189eb144fe1bab6",
            "owner_id": "765407882676",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "productapi_rtb"
            },
            "tags_all": {
              "Name": "productapi_rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-04a55a15cf8ca9e13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.product_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "product_rtb_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c11395e731cb7814",
            "route_table_id": "rtb-07189eb144fe1bab6",
            "subnet_id": "subnet-0a73b20ace3616c7d"
          },
          "dependencies": [
            "aws_route_table.product_rtb",
            "aws_subnet.product_subnet",
            "aws_vpc.product_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "product_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765407882676:security-group/sg-0b048af81ecb113de",
            "description": "productapi security group",
            "egress": [],
            "id": "sg-0b048af81ecb113de",
            "ingress": [],
            "name": "productapi_sg",
            "name_prefix": "",
            "owner_id": "765407882676",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04a55a15cf8ca9e13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.product_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sgr_pub_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-63254161",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b048af81ecb113de",
            "security_group_rule_id": "sgr-00e5dafda053e2073",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.product_sg",
            "aws_vpc.product_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "srg_http_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-2179876674",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b048af81ecb113de",
            "security_group_rule_id": "sgr-0e29afda52a5f470f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.product_sg",
            "aws_vpc.product_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "srg_ssh_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-929307383",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b048af81ecb113de",
            "security_group_rule_id": "sgr-01f2daff10e31d34d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.product_sg",
            "aws_vpc.product_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "product_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765407882676:subnet/subnet-0a73b20ace3616c7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a73b20ace3616c7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "765407882676",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "productapi_subnet_pub"
            },
            "tags_all": {
              "Name": "productapi_subnet_pub"
            },
            "vpc_id": "vpc-04a55a15cf8ca9e13"
          },
          "dependencies": [
            "aws_vpc.product_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "product_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:765407882676:vpc/vpc-04a55a15cf8ca9e13",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01eb46b5662e6a202",
            "default_route_table_id": "rtb-0268bab797c3947d7",
            "default_security_group_id": "sg-0f6815f1bb20b0406",
            "dhcp_options_id": "dopt-078064258b853045a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04a55a15cf8ca9e13",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0268bab797c3947d7",
            "owner_id": "765407882676",
            "tags": {
              "Name": "productapi_vpc"
            },
            "tags_all": {
              "Name": "productapi_vpc"
            }
          }
        }
      ]
    }
  ]
}